--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+    @apply bg-[#ecf0f3] text-[#1f2937] dark:bg-[#0c121c] dark:text-[#ecf0f3] tracking-wide scroll-smooth
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -28,6 +28,6 @@ html {
   }
 
   button {
-    @apply shadow-xl shadow-gray-300 rounded-xl uppercase bg-gradient-to-r from-[#4d797b] to-[#3b5152] text-white
+    @apply shadow-xl shadow-gray-300 dark:shadow-none rounded-lg uppercase 
   }
 }
