ui changes to about section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,4 +109,4 @@ html {
   * {
     @apply border-border;}
   body {
-    @apply bg-background text-foreground;}} 
+    @apply h-screen w-screen bg-background text-foreground;}} 
