--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,11 +10,11 @@ html {
 
 @layer base {
   body {
-    @apply bg-stone-50 text-[#1f2937] dark:bg-stone-800 dark:text-[#ecf0f3] tracking-wide 
+    @apply bg-stone-50 text-[#1f2937] dark:bg-[#000515] dark:text-[#ecf0f3] tracking-wide 
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @apply font-bold text-[#1f2937] dark:text-red-500 
+    @apply font-bold text-[#1f2937] dark:text-slate-200 
   }
 
   h1 {
